Fix for hamburger menu wrapping; quicker transition effects when opening the menu

--- a/LotsOfChicken.css
+++ b/LotsOfChicken.css
@@ -989,7 +989,7 @@ footer #pay {
 	nav a {
 		display:none;
 		opacity: 0;
-		transition: all 1s ease;
+		transition: all .5s ease;
 	}
 	nav a.current {
 		display:inline-block;
@@ -1005,7 +1005,7 @@ footer #pay {
 		line-height: 1em;
 	}*/
 	#hamburger {
-		display: block;
+		display: inline-block;
 		opacity:1;
 		float:right;
 		padding:0 .5em;
